--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>nl.b3p.ro.tercera.soap</groupId>
   <artifactId>tercera-soap-client</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>tercera-soap-client</name>
